--- a/cart.html
+++ b/cart.html
@@ -16,7 +16,7 @@
   <div class="total-section" id="totalPrice">Total: ₹0</div>
 
   <div style="text-align: center;">
-    <a href="index.html" class="back-btn">Continue Shopping</a>
+    <a href="home.html" class="back-btn">Continue Shopping</a>
   </div>
   <div style="text-align: center; margin-top: 10px;"></div>
   <button onclick="placeOrder()" class="Order-btn">Place Order</button>
